--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "invocation",
+  "name": "spritesheet-generator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "buildcss": "npx tailwind build -i ./src/css/index.css -o ./lib/css/tailwind.css",
+    "preview": "vite preview",
+    "watch": "npx tailwind build -i ./src/css/index.css -o ./lib/css/tailwind.css -w"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,9 +17,14 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "postcss-import": "^15.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
