--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "buildcss": "npx tailwind build -i ./src/css/index.css -o ./lib/css/tailwind.css",
+    "buildcss": "npx tailwind build -i ./src/css/main.css -o ./src/tailwindcss/tailwind.css",
     "preview": "vite preview",
-    "watch": "npx tailwind build -i ./src/css/index.css -o ./lib/css/tailwind.css -w"
+    "watch": "npx tailwind build -i ./src/css/main.css -o ./src/tailwindcss/tailwind.css -w"
   },
   "dependencies": {
     "react": "^18.2.0",
